# services/authentication/docs/swagger.yaml
@@ -1,5 +1,37 @@
 basePath: /
 definitions:
+  domain.Claims:
+    properties:
+      aud:
+        description: the `aud` (Audience) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3
+        items:
+          type: string
+        type: array
+      exp:
+        allOf:
+        - $ref: '#/definitions/domain.NumericDate'
+        description: the `exp` (Expiration Time) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.4
+      iat:
+        allOf:
+        - $ref: '#/definitions/domain.NumericDate'
+        description: the `iat` (Issued At) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.6
+      iss:
+        type: string
+      jti:
+        description: the `jti` (JWT ID) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.7
+        type: string
+      level:
+        $ref: '#/definitions/domain.Level'
+      name:
+        type: string
+      nbf:
+        allOf:
+        - $ref: '#/definitions/domain.NumericDate'
+        description: the `nbf` (Not Before) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.5
+      sub:
+        description: the `sub` (Subject) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.2
+        type: string
+    type: object
   domain.FlowType:
     enum:
     - websiteSession
@@ -8,14 +40,31 @@ definitions:
     x-enum-varnames:
     - WebsiteSessionFlow
     - RememberMeFlow
+  domain.Level:
+    enum:
+    - admin
+    - user
+    - anonymous
+    type: string
+    x-enum-varnames:
+    - AdminLevel
+    - UserLevel
+    - AnonymousLevel
+  domain.NumericDate:
+    properties:
+      time.Time:
+        type: string
+    type: object
   domain.Tokens:
     properties:
       accessToken:
         type: string
-      expiresIn:
+      accessTokenExpiration:
         type: integer
       refreshToken:
         type: string
+      refreshTokenExpiration:
+        type: integer
     type: object
   router.jwks:
     properties:
@@ -51,6 +100,14 @@ definitions:
       refreshToken:
         type: string
     type: object
+  router.response:
+    properties:
+      error:
+        type: string
+      response: {}
+      statusCode:
+        type: integer
+    type: object
   router.validationPayload:
     properties:
       accessToken:
@@ -77,7 +134,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/router.jwks'
+            allOf:
+            - $ref: '#/definitions/router.response'
+            - properties:
+                response:
+                  $ref: '#/definitions/router.jwks'
+              type: object
       summary: JSON Web Key Set
       tags:
       - authentication
@@ -92,15 +154,20 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Tokens'
+            allOf:
+            - $ref: '#/definitions/router.response'
+            - properties:
+                response:
+                  $ref: '#/definitions/domain.Tokens'
+              type: object
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
       summary: Login anonymously
       tags:
       - authentication
@@ -122,19 +189,24 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Tokens'
+            allOf:
+            - $ref: '#/definitions/router.response'
+            - properties:
+                response:
+                  $ref: '#/definitions/domain.Tokens'
+              type: object
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
       summary: Login
       tags:
       - authentication
@@ -155,19 +227,19 @@ paths:
         "200":
           description: OK
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
       summary: Logout
       tags:
       - authentication
@@ -189,19 +261,24 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Tokens'
+            allOf:
+            - $ref: '#/definitions/router.response'
+            - properties:
+                response:
+                  $ref: '#/definitions/domain.Tokens'
+              type: object
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
       summary: Refresh tokens
       tags:
       - authentication
@@ -223,19 +300,24 @@ paths:
         "200":
           description: OK
           schema:
-            type: string
+            allOf:
+            - $ref: '#/definitions/router.response'
+            - properties:
+                response:
+                  $ref: '#/definitions/domain.Claims'
+              type: object
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "401":
           description: Unauthorized
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
         "500":
           description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/router.response'
       summary: Validate access token
       tags:
       - authentication
